[package]
name = "livesplit-renderer-glow"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A GPU-accelerated renderer for livesplit-core using OpenGL via glow"
repository = "https://github.com/dagit/livesplit-renderer-glow"

[dependencies]
livesplit-core = { git = "https://github.com/LiveSplit/livesplit-core", features = ["default-text-engine", "font-loading"] }
glow = "0.16"
lyon = "1"
bytemuck = { version = "1", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
